<resources>
    <string name="app_name">PlanMyTrip</string>
    <string name="title_activity_index">Index</string>
    <string name="title_map">Map</string>
    <string name="title_trips">Trips</string>
    <string name="title_profile">Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="edit_profile">Edit</string>
    <string name="greeting">Hello</string>
    <string name="required_email">Email is required!</string>
    <string name="valid_email">Please enter a valid email!</string>
    <string name="required_password">Password is required!</string>
    <string name="required_password2">2nd Password is required!</string>
    <string name="required_firstName">First name is required!</string>
    <string name="required_lastName">Last name is required!</string>
    <string name="required_birthdate">Birthdate is required!</string>
    <string name="required_phoneNumber">Phone number is required!</string>
    <string name="valid_phoneNumber">Please provide an valid phone number!</string>
    <string name="valid_email_R">Please provide an valid email!\nEx: abc@abc.abc</string>
    <string name="validation_password">Passwords should be the same and longer than 6 characters!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="done">Done</string>
    <string name="birth_date">Birth Date</string>
    <string name="create_package_list">Create Package List</string>
    <string name="man_with_baggage">A man with Baggage.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="date_format_edit">yyyy-MM-dd</string>
    <string name="edit_profile_title">Edit your profile</string>
    <string name="save">SAVE</string>
    <string name="address">Address:</string>
    <string name="updates">Updates:</string>
    <string name="cell_tower_wifi">Cell Tower + Wifi</string>
    <string name="sensor">Sensor:</string>
    <string name="speed">Speed:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="altitude">Altitude:</string>
    <string name="lon">lon:</string>
    <string name="_0_00">0.00</string>
    <string name="lat">Lat:</string>
    <string name="using_gps">Using GPS</string>
    <string name="tower_wifi">Using Tower +Wifi</string>
    <string name="not_available">Not available</string>
    <string name="location_track">Location is being tracked</string>
    <string name="location_not_tracked">Location not being tracked</string>
    <string name="unable_location">Unable to get address</string>
    <string name="waypoints">WayPoints</string>
    <string name="_0">0</string>
    <string name="add_waypoint">Add Waypoint</string>
    <string name="show_waypoints">Show Waypoints</string>
    <string name="show_map">Show Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="add_a_new_trip">Add a new trip</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="package_item">item</string>
    <string name="textTitle">How to use PlanMyTrip</string>
    <string name="textButton">Close</string>
    <string name="infoText">
        1. Be specific on search destination, do not use vaguely describing terms\n
        2. In order to add a new checkpoint to the current trip tap and hold long on the desired location\n
        3. Selecting a checkpoint on the map will automatically open the navigation from the current location to the selected Point of Interest\n
        4. To access the baggage option please select a trip first, if none possible please create one\n
        5. If you want to access the baggage for the current trip use the bottom right button

    </string>
    <string name="info_package">
        If you want to edit or delete any item on the displayed list, please swipe left to delete or right to edit
    </string>
    <string name="register_onSuccess">User has been registered successfully!</string>
    <string name="register_onFailure">Failed to register!\n Try again!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="welcome">WELCOME</string>
</resources>